Changelog
=========

2.0a2 (2011-02-08)
------------------

- Remove "Plone 3 only" code.
  [timo]
  
- Do not monkey patch the BAD_TYPES vocabulary or plone.app.vocabularies
  anymore.
  [timo]


2.0a1 (2011-02-07)
------------------

- Split up development into two branches. The 1.x branch will be for Plone 3.x 
  and Plone 4.0.x and the 2.x branch will be for Plone 4.1 and beyond.
  [timo]

- Import Owned from OFS.owner to avoid deprecation warnings.
  [timo]
  
- Disable discussion by default.
  [timo]
  
- Enable ajaxify comment deletion again ([thomasdesvenain]). This has been 
  disabled in 1.0b12 because of problems with Plone 3.
  [timo]
  
- Remove collective.autopermission dependency that has become unnecessary in
  Plone 4.1.
  [timo]


1.0 (2011-02-07)
----------------

- Do not check for a comment review workflow when sending out a moderator email
  notification. This fixes http://dev.plone.org/plone/ticket/11444.
  [timo]
  
- Check if the current user has configured an e-mail address for the email 
  notification option. This fixes http://dev.plone.org/plone/ticket/11428.
  [timo]  


1.0RC2 (2011-01-24)
-------------------

- Remove moderation_enabled setting from registry to avoid migration problems
  to 1.0RC1. This fixes http://dev.plone.org/plone/ticket/11419.
  [timo]


1.0RC1 (2011-01-22)
-------------------

- Always show existing comments, even if commenting is disabled. 
  [timo]
  
- Fix CSS for commenter images with a width of more than 2.5em. This fixes 
  http://dev.plone.org/plone/ticket/11391.
  [timo]

- Show a 'Comments are moderated.' message next to the comment form if comments
  are moderated. 
  [timo]
  
- Make sure plone.app.registry's ZCML is loaded, so that its import step will run
  when plone.app.discussion is installed.
  [davisagli]

- Avoid sending multiple notification emails to the same person when
  he has commented multiple times.
  [maurits]
  