@@ -4,6 +4,10 @@ Changelog
 2.0a2 (2011-02-08)
 ------------------
 
+- Fixed test failure for the default user portrait, which changed from
+  defaultUser.gif to defaultUser.png in Products.PlonePAS 4.0.5.
+  [maurits]
+
 - Remove "Plone 3 only" code.
   [timo]
   
